encoding/jsonschema/testdata/txtar/enumexcluded.txtar
-- schema.json --
{
  "type": "object",
  "enum": ["x"]
}
-- out/decode/extract --
ERROR:
constraints are not possible to satisfy:
    schema.json:1:1
-- out/decode-v3/extract --
ERROR:
constraints are not possible to satisfy:
    schema.json:1:1
